// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component (data-fetched): data-fetched 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="chakra-ui-light"
  >
    <div
      id="chakra-toast-portal"
    >
      <ul
        id="chakra-toast-manager-top"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto; top: 0px; right: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-top-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; top: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-top-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; top: 0px; right: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; bottom: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto; bottom: 0px; right: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; bottom: 0px; right: 0px;"
      />
    </div>
    <div>
      <div>
        Loading...
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      Loading...
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the component (data-fetched): data-fetched 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="chakra-ui-light"
  >
    <div
      id="chakra-toast-portal"
    >
      <ul
        id="chakra-toast-manager-top"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto; top: 0px; right: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-top-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; top: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-top-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; top: 0px; right: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; bottom: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto; bottom: 0px; right: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; bottom: 0px; right: 0px;"
      />
    </div>
    <div>
      <div
        class="chakra-container css-nm5t63"
      >
        <div
          class="css-dvxtzn"
        >
          <div
            class="chakra-stack css-kuxzr6"
          >
            <span
              class="css-mi7bwv"
            >
              <span
                class="css-1v3sf2x"
              >
                grass
              </span>
            </span>
            <span
              class="css-mi7bwv"
            >
              <span
                class="css-1v3sf2x"
              >
                poison
              </span>
            </span>
          </div>
          <div
            class="chakra-container css-ju1cjz"
          >
            <img
              class="chakra-image__placeholder css-1tz2n1v"
              src="placeholder.png"
            />
            <hr
              aria-orientation="vertical"
              class="chakra-divider css-1aam7vk"
              role="separator"
            />
            <div
              class="css-10sffrr"
            >
              <div
                class="css-rklm6r"
              >
                <h4
                  class="chakra-heading css-1dklj6k"
                >
                  IVYSAUR
                </h4>
              </div>
              <div
                class="chakra-stat css-1mbo1ls"
              >
                <dl>
                  <dt
                    class="chakra-stat__label css-14go5ty"
                  >
                    ID
                  </dt>
                  <dd
                    class="chakra-stat__number css-1axeus7"
                  >
                    # 
                    2
                  </dd>
                </dl>
              </div>
              <div
                class="chakra-stat css-1mbo1ls"
              >
                <dl>
                  <dt
                    class="chakra-stat__label css-14go5ty"
                  >
                    Height
                  </dt>
                  <dd
                    class="chakra-stat__number css-1axeus7"
                  >
                    10
                  </dd>
                </dl>
              </div>
              <div
                class="chakra-stat css-1mbo1ls"
              >
                <dl>
                  <dt
                    class="chakra-stat__label css-14go5ty"
                  >
                    Weight
                  </dt>
                  <dd
                    class="chakra-stat__number css-1axeus7"
                  >
                    130
                  </dd>
                </dl>
              </div>
            </div>
          </div>
        </div>
        <div
          class="chakra-container css-3aul1p"
        >
          <h2
            class="chakra-heading css-ci02qy"
          >
            Moves List
          </h2>
          <div
            class="no-scrollbar css-iqyxvu"
          >
            <span
              class="css-1fza2wb"
            >
              <span
                class="css-g4o07i"
              >
                swords-dance
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="css-1ue797s"
      >
        <button
          class="chakra-button css-17i1qg7"
          type="button"
        >
          <img
            class="chakra-image__placeholder css-0"
          />
        </button>
      </div>
      <div
        aria-controls="popover-content-2"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="css-1rpneay"
        id="popover-trigger-2"
      />
      <div
        class="css-11r8ny"
        data-popper-escaped=""
        data-popper-placement="bottom"
        data-popper-reference-hidden=""
        style="--popper-arrow-shadow-color: #E2E8F0; visibility: hidden; margin: 0px; --popper-transform-origin: top center; position: absolute; left: 0px; top: 0px; transform: translate(0px, 8px);"
      >
        <section
          aria-describedby="popover-body-2"
          aria-labelledby="popover-header-2"
          class="chakra-popover__content css-l1sj48"
          id="popover-content-2"
          role="dialog"
          style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
          tabindex="-1"
        >
          <header
            class="chakra-popover__header css-1x1js2i"
            id="popover-header-2"
          >
            Catch 
            ivysaur
          </header>
          <button
            aria-label="Close"
            class="css-y3dsx3"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="chakra-icon css-onkibi"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            class="chakra-popover__body css-1ews2c8"
            id="popover-body-2"
          >
            Are you sure you want to catch this Pokemon?
             
            <strong>
              (Success probability 
              50
              %)
            </strong>
          </div>
          <footer
            class="chakra-popover__footer css-1brmfnp"
          >
            <div
              class="chakra-button__group css-1ezzth2"
              role="group"
            >
              <button
                class="chakra-button css-1u73en3"
                type="button"
              >
                Cancel
              </button>
              <button
                class="chakra-button css-1k6fjms"
                type="button"
              >
                Catch
              </button>
            </div>
          </footer>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="chakra-container css-nm5t63"
    >
      <div
        class="css-dvxtzn"
      >
        <div
          class="chakra-stack css-kuxzr6"
        >
          <span
            class="css-mi7bwv"
          >
            <span
              class="css-1v3sf2x"
            >
              grass
            </span>
          </span>
          <span
            class="css-mi7bwv"
          >
            <span
              class="css-1v3sf2x"
            >
              poison
            </span>
          </span>
        </div>
        <div
          class="chakra-container css-ju1cjz"
        >
          <img
            class="chakra-image__placeholder css-1tz2n1v"
            src="placeholder.png"
          />
          <hr
            aria-orientation="vertical"
            class="chakra-divider css-1aam7vk"
            role="separator"
          />
          <div
            class="css-10sffrr"
          >
            <div
              class="css-rklm6r"
            >
              <h4
                class="chakra-heading css-1dklj6k"
              >
                IVYSAUR
              </h4>
            </div>
            <div
              class="chakra-stat css-1mbo1ls"
            >
              <dl>
                <dt
                  class="chakra-stat__label css-14go5ty"
                >
                  ID
                </dt>
                <dd
                  class="chakra-stat__number css-1axeus7"
                >
                  # 
                  2
                </dd>
              </dl>
            </div>
            <div
              class="chakra-stat css-1mbo1ls"
            >
              <dl>
                <dt
                  class="chakra-stat__label css-14go5ty"
                >
                  Height
                </dt>
                <dd
                  class="chakra-stat__number css-1axeus7"
                >
                  10
                </dd>
              </dl>
            </div>
            <div
              class="chakra-stat css-1mbo1ls"
            >
              <dl>
                <dt
                  class="chakra-stat__label css-14go5ty"
                >
                  Weight
                </dt>
                <dd
                  class="chakra-stat__number css-1axeus7"
                >
                  130
                </dd>
              </dl>
            </div>
          </div>
        </div>
      </div>
      <div
        class="chakra-container css-3aul1p"
      >
        <h2
          class="chakra-heading css-ci02qy"
        >
          Moves List
        </h2>
        <div
          class="no-scrollbar css-iqyxvu"
        >
          <span
            class="css-1fza2wb"
          >
            <span
              class="css-g4o07i"
            >
              swords-dance
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="css-1ue797s"
    >
      <button
        class="chakra-button css-17i1qg7"
        type="button"
      >
        <img
          class="chakra-image__placeholder css-0"
        />
      </button>
    </div>
    <div
      aria-controls="popover-content-2"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="css-1rpneay"
      id="popover-trigger-2"
    />
    <div
      class="css-11r8ny"
      data-popper-escaped=""
      data-popper-placement="bottom"
      data-popper-reference-hidden=""
      style="--popper-arrow-shadow-color: #E2E8F0; visibility: hidden; margin: 0px; --popper-transform-origin: top center; position: absolute; left: 0px; top: 0px; transform: translate(0px, 8px);"
    >
      <section
        aria-describedby="popover-body-2"
        aria-labelledby="popover-header-2"
        class="chakra-popover__content css-l1sj48"
        id="popover-content-2"
        role="dialog"
        style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
        tabindex="-1"
      >
        <header
          class="chakra-popover__header css-1x1js2i"
          id="popover-header-2"
        >
          Catch 
          ivysaur
        </header>
        <button
          aria-label="Close"
          class="css-y3dsx3"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-onkibi"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="chakra-popover__body css-1ews2c8"
          id="popover-body-2"
        >
          Are you sure you want to catch this Pokemon?
           
          <strong>
            (Success probability 
            50
            %)
          </strong>
        </div>
        <footer
          class="chakra-popover__footer css-1brmfnp"
        >
          <div
            class="chakra-button__group css-1ezzth2"
            role="group"
          >
            <button
              class="chakra-button css-1u73en3"
              type="button"
            >
              Cancel
            </button>
            <button
              class="chakra-button css-1k6fjms"
              type="button"
            >
              Catch
            </button>
          </div>
        </footer>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the component (error): error 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="chakra-ui-light"
  >
    <div
      id="chakra-toast-portal"
    >
      <ul
        id="chakra-toast-manager-top"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto; top: 0px; right: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-top-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; top: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-top-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; top: 0px; right: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; bottom: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto; bottom: 0px; right: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; bottom: 0px; right: 0px;"
      />
    </div>
    <div>
      <div
        class="chakra-container css-1ism20u"
      >
        <div
          class="css-hpuyrm"
        >
          <div
            class="chakra-alert css-ldiuxo"
            role="alert"
          >
            <span
              class="chakra-alert__icon css-1yfrj3e"
            >
              <svg
                class="chakra-icon css-fi0ww0"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="chakra-alert__title css-1luzveo"
            >
              Not Found
            </div>
            <div
              class="chakra-alert__desc css-1oa6yzk"
            >
              Oops, Error Occured!
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="chakra-container css-1ism20u"
    >
      <div
        class="css-hpuyrm"
      >
        <div
          class="chakra-alert css-ldiuxo"
          role="alert"
        >
          <span
            class="chakra-alert__icon css-1yfrj3e"
          >
            <svg
              class="chakra-icon css-fi0ww0"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            class="chakra-alert__title css-1luzveo"
          >
            Not Found
          </div>
          <div
            class="chakra-alert__desc css-1oa6yzk"
          >
            Oops, Error Occured!
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the component (loading): loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="chakra-ui-light"
  >
    <div
      id="chakra-toast-portal"
    >
      <ul
        id="chakra-toast-manager-top"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto; top: 0px; right: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-top-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; top: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-top-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; top: 0px; right: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; bottom: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto; bottom: 0px; right: 0px; left: 0px;"
      />
      <ul
        id="chakra-toast-manager-bottom-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; bottom: 0px; right: 0px;"
      />
    </div>
    <div>
      <div>
        Loading...
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      Loading...
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
